--- a/second.html
+++ b/second.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>My second page</h1>
-    <a href="index.html">Go back</a>
+    <a href="Landing page.html">Go back</a>
 </body>
 </html>
